fix(routes): Making adjustments for nicer integration

--- a/app/views/mongoid_forums/topics/my_subscriptions.haml
+++ b/app/views/mongoid_forums/topics/my_subscriptions.haml
@@ -1,5 +1,8 @@
-%h2 Your subscriptions
-= paginate @topics
+.container
+  .row
+    .col-sm-12
+      %h2 Your subscriptions
+      = paginate @topics
 
-- @topics.each do |sub|
-  = render partial: 'topic', :locals => {:topic => sub.subscribable}
+      - @topics.each do |sub|
+        = render partial: 'topic', :locals => {:topic => sub.subscribable}
