--- a/app/views/mongoid_forums/topics/my_posts.haml
+++ b/app/views/mongoid_forums/topics/my_posts.haml
@@ -1,6 +1,9 @@
-%h2 Your Posts
+.container
+  .row
+    .col-sm-12
+      %h2 Your Posts
 
-= paginate @posts
+      = paginate @posts
 
-- @posts.each do |post|
-  = render partial: 'mongoid_forums/posts/post', :locals => {:post => post}
+      - @posts.each do |post|
+        = render partial: 'mongoid_forums/posts/post', :locals => {:post => post}
