--- a/app/views/mongoid_forums/topics/show.haml
+++ b/app/views/mongoid_forums/topics/show.haml
@@ -1,16 +1,19 @@
-%h1 Viewing Topic "#{@topic.emojified_name}"
-- if mongoid_forums_admin?
-  = link_to t("mongoid_forums.topics.actions.hide.#{@topic.hidden}"), toggle_hide_admin_topic_path(@forum, @topic), :class => "btn"
-  = link_to t("mongoid_forums.topics.actions.lock.#{@topic.locked}"), toggle_lock_admin_topic_path(@forum, @topic), :class => "btn"
-  = link_to t("mongoid_forums.topics.actions.pin.#{@topic.pinned}"), toggle_pin_admin_topic_path(@forum, @topic), :class => "btn"
+.container
+  .row
+    .col-sm-12
+      %h1 Viewing Topic "#{@topic.emojified_name}"
+      - if mongoid_forums_admin?
+        = link_to t("mongoid_forums.topics.actions.hide.#{@topic.hidden}"), toggle_hide_admin_topic_path(@forum, @topic), :class => "btn"
+        = link_to t("mongoid_forums.topics.actions.lock.#{@topic.locked}"), toggle_lock_admin_topic_path(@forum, @topic), :class => "btn"
+        = link_to t("mongoid_forums.topics.actions.pin.#{@topic.pinned}"), toggle_pin_admin_topic_path(@forum, @topic), :class => "btn"
 
-- if @topic.can_be_replied_to? && can?(:reply, @topic)
-  = link_to "Reply to topic", new_topic_post_path(@topic)
-- if mongoid_forums_user && @topic.subscriber?(mongoid_forums_user.id)
-  = link_to "Unsubscribe", unsubscribe_topic_path(@topic)
--elsif mongoid_forums_user
-  = link_to "Subscribe", subscribe_topic_path(@topic)
-%br
-= paginate @posts
-%br
-= render @posts
+      - if @topic.can_be_replied_to? && can?(:reply, @topic)
+        = link_to "Reply to topic", new_topic_post_path(@topic)
+      - if mongoid_forums_user && @topic.subscriber?(mongoid_forums_user.id)
+        = link_to "Unsubscribe", unsubscribe_topic_path(@topic)
+      - elsif mongoid_forums_user
+        = link_to "Subscribe", subscribe_topic_path(@topic)
+      %br
+      = paginate @posts
+      %br
+      = render @posts
