--- a/app/views/mongoid_forums/forums/index.haml
+++ b/app/views/mongoid_forums/forums/index.haml
@@ -1,49 +1,28 @@
 .container
   .row
     .col-sm-12
-      %h1 Listing all forums
 
-      - @categories.each do |category|
-        %h2
-          = category.name
-          Category
-        - if category.moderator?(mongoid_forums_user)
-          %b You are a moderator of this category
-        %table{:border => "1"}
-          %tr
-            %th
-              Name
-            %th
-              Last post
-            %th
-              Topics
-            %th
-              Posts
-            %th
-              Unread topics
-            %th
-              Views
+      %h3 Message Boards
 
-          - category.forums.asc(:position).each do |forum|
-            %tr
-              %td
-                = link_to forum.name, forum
-              %td
-                - if forum.topics.select {|topic| can?(:read, topic) }.last
-                  - last_topic = forum.topics.select {|topic| can?(:read, topic) }.last
-                  - last_post = last_topic.posts.last
-                  = time_ago_in_words ( last_post.created_at )
-                  ago on
-                  = link_to last_post.topic.emojified_name, last_post.topic
-                  by
-                  = last_post.user.forum_display_name
-                - else
-                  No posts yet
-              %td
-                = topics_count(forum) ? topics_count(forum) : "None"
-              %td
-                = posts_count(forum) ? posts_count(forum) : "None"
-              %td
-                = mongoid_forums_user ? forum.unread_topic_count(mongoid_forums_user) : ""
-              %td
-                = forum.views_count ? forum.views_count : "None"
+      .message-board
+        - @categories.each do |category|
+          %section.forum-boards
+            %h3
+              = category.name
+            - if category.moderator?(mongoid_forums_user)
+              %b You are a moderator of this category
+              
+            - category.forums.asc(:position).each do |forum|
+
+              = link_to forum, class: 'forum-board' do
+                %header
+                  %h3
+                    = forum.name
+                    %span.small
+                      = "#{topics_count(forum)} topics | #{posts_count(forum)} posts"
+
+                  %p
+                    = forum.description
+
+                  %p.forum-last-post
+                    = last_post(forum)
