--- a/app/views/mongoid_forums/topics/my_posts.haml
+++ b/app/views/mongoid_forums/topics/my_posts.haml
@@ -1,9 +1,13 @@
 .container
   .row
     .col-sm-12
-      %h2 Your Posts
 
-      = paginate @posts
+      %h3 Message Boards
 
-      - @posts.each do |post|
-        = render partial: 'mongoid_forums/posts/post', :locals => {:post => post}
+      .message-board
+        %h2 Your Posts
+
+        = paginate @posts
+
+        - @posts.each do |post|
+          = render partial: 'mongoid_forums/posts/post', :locals => {:post => post}
