--- a/app/views/mongoid_forums/admin/categories/show.haml
+++ b/app/views/mongoid_forums/admin/categories/show.haml
@@ -1,21 +1,39 @@
-%h2 Listing all moderator groups for: #{@category.name}
-%table{:border => "1"}
-  %tr
-    %th
-      Name
+.container
+  .row
+    .col-sm-12
 
-  - @category.moderator_groups.each do |group|
-    %tr
-      %td
-        = link_to group.name, [:admin, group]
-      %td
-        = link_to "Show", admin_group_path(group)
-      %td
-        = link_to "Edit", edit_admin_group_path(group)
-      %td
-        = button_to "Remove", admin_category_rem_group_path(category_id: params[:id], group: {id: group.id}), method: :post, data: { confirm: 'Are you certain you want to delete this?' }
+      %h3 Message Boards :: Admin
 
-= form_tag admin_category_add_group_path(@category), :method => :post do
-  = collection_select(:group, :id, @groups, :id, :name, {:prompt => true})
-  %button
-    Add
+      .message-board
+        %h3
+          = link_to 'Forum Admin', admin_root_url
+          %i.fa.fa-fw.fa-angle-right
+          = link_to 'Forums', admin_forums_url
+          %i.fa.fa-fw.fa-angle-right
+          = "#{@category.name} moderator groups"
+
+        %table.table
+          %tr
+            %th
+              Name
+            %th
+
+          - @category.moderator_groups.each do |group|
+            %tr
+              %td
+                = link_to group.name, [:admin, group]
+              %td.align-right
+                = link_to admin_group_path(group) do
+                  Show
+                  %i.fa.fa-fw.fa-eye
+                = link_to edit_admin_group_path(group) do
+                  Edit
+                  %i.fa.fa-fw.fa-edit
+                = link_to admin_category_rem_group_path(category_id: params[:id], group: {id: group.id}), method: :post, data: { confirm: 'Are you certain you want to delete this?' } do
+                  Remove
+                  %i.fa.fa-fw.fa-trash-o
+
+        = form_tag admin_category_add_group_path(@category), :method => :post, class: 'form form-inline' do
+          = collection_select(:group, :id, @groups, :id, :name, {:prompt => true}, { class: 'form-control' })
+          %button.btn.btn-success
+            Add
