--- a/app/views/mongoid_forums/admin/forums/edit.haml
+++ b/app/views/mongoid_forums/admin/forums/edit.haml
@@ -1,5 +1,25 @@
-= simple_form_for [:admin, @forum] do |f|
-  = f.input :name
-  = f.input :category, collection: MongoidForums::Category.all
-  = f.input :position
-  = f.submit "Update Forum", :class => "btn", :disable_with => "Updating..."
+.container
+  .row
+    .col-sm-12
+
+      %h3 Message Boards :: Admin
+
+      .message-board
+        %h3
+          = link_to 'Forum Admin', admin_root_url
+          %i.fa.fa-fw.fa-angle-right
+          = link_to 'Forums', admin_forums_url
+          %i.fa.fa-fw.fa-angle-right
+          Edit Forum
+
+        = simple_form_for [:admin, @forum], class: 'form' do |f|
+          .form-group
+            = f.input :name, input_html: { class: 'form-control' }
+          .form-group
+            = f.label :description
+            = f.text_area :description, class: 'form-control'
+          .form-group
+            = f.input :category, collection: MongoidForums::Category.all, selected: @forum.category.id, input_html: { class: 'form-control' }
+            = f.input :position, input_html: { class: 'form-control' }
+          .form-group.align-right
+            = f.submit "Update Forum", :class => "btn btn-primary", :disable_with => "Updating..."
