--- a/app/views/mongoid_forums/admin/forums/index.haml
+++ b/app/views/mongoid_forums/admin/forums/index.haml
@@ -1,25 +1,39 @@
-%h1 Manage forums
+.container
+  .row
+    .col-sm-12
 
-%h2 Create a new forum
-= link_to "New forum", new_admin_forum_path
+      %h3 Message Boards :: Admin
 
-%h2 Listing all forums
-%table{:border => "1"}
-  %tr
-    %th
-      Name
-    %th
-      Category
+      .message-board
+        %h3
+          = link_to 'Forum Admin', admin_root_url
+          %i.fa.fa-fw.fa-angle-right
+          Forums
 
-  - @forums.each do |forum|
-    %tr
-      %td
-        = link_to forum.name, [:admin, forum]
-      %td
-        = link_to forum.category.name, [:admin, forum.category]
-      %td
-        = link_to "Show", admin_forum_path(forum)
-      %td
-        = link_to "Edit", edit_admin_forum_path(forum)
-      %td
-        = button_to "Destroy", admin_forum_path(forum), method: :delete, data: { confirm: 'Are you certain you want to delete this?' }
+          = link_to "New forum", new_admin_forum_path, class: 'btn btn-primary pull-right'
+
+
+        %table.table
+          %tr
+            %th
+              Name
+            %th
+              Category
+            %th
+
+          - @forums.each do |forum|
+            %tr
+              %td
+                = link_to forum.name, [:admin, forum]
+              %td
+                = link_to forum.category.name, [:admin, forum.category]
+              %td.align-right
+                = link_to admin_forum_path(forum) do
+                  View
+                  %i.fa.fa-fw.fa-eye
+                = link_to edit_admin_forum_path(forum) do
+                  Edit
+                  %i.fa.fa-fw.fa-edit
+                = link_to admin_forum_path(forum), method: :delete, class: 'text-danger', data: { confirm: 'Are you certain you want to delete this?' } do
+                  Delete
+                  %i.fa.fa-fw.fa-trash-o
