--- a/app/views/mongoid_forums/admin/groups/index.haml
+++ b/app/views/mongoid_forums/admin/groups/index.haml
@@ -1,23 +1,36 @@
-%h1 Manage groups
+.container
+  .row
+    .col-sm-12
 
-%h2 Create a new group
-= link_to "New group", new_admin_group_path
+      %h3 Message Boards :: Admin
 
-%h2 Listing all groups
-%table{:border => "1"}
-  %tr
-    %th
-      Name
-    %th
-      Moderator
+      .message-board
 
-  - @groups.each_with_index do |group, i|
-    %tr
-      %td
-        = link_to group.name, [:admin, group]
-      %td
-        = group.moderator
-      %td
-        = link_to "Edit", edit_admin_group_path(group)
-      %td
-        = button_to "Destroy", admin_group_path(group), method: :delete, data: { confirm: 'Are you certain you want to delete this?' }
+        %h3
+          = link_to 'Forum Admin', admin_root_url
+          %i.fa.fa-fw.fa-angle-right
+          Groups
+
+          = link_to "New group", new_admin_group_path, class: 'btn btn-primary pull-right'
+
+        %table.table
+          %tr
+            %th
+              Name
+            %th
+              Moderator
+            %th
+
+          - @groups.each_with_index do |group, i|
+            %tr
+              %td
+                = link_to group.name, [:admin, group]
+              %td
+                = group.moderator ? 'Yes' : 'No'
+              %td.align-right
+                = link_to edit_admin_group_path(group) do
+                  Edit
+                  %i.fa.fa-fw.fa-edit
+                = link_to admin_group_path(group), method: :delete, class: 'text-danger', data: { confirm: 'Are you certain you want to delete this?' } do
+                  Delete
+                  %i.fa.fa-fw.fa-trash-o
