--- a/app/views/mongoid_forums/posts/_form.haml
+++ b/app/views/mongoid_forums/posts/_form.haml
@@ -1,4 +1,3 @@
-= f.text_area :text
-%br
+= f.text_area :text, rows: 5, class: 'form-control', placeholder: 'Your message'
 - if params[:reply_to_id]
   = f.hidden_field :reply_to_id, :value => params[:reply_to_id]
