--- a/app/views/mongoid_forums/posts/_post.haml
+++ b/app/views/mongoid_forums/posts/_post.haml
@@ -1,9 +1,9 @@
 %article.forum-post
   %header
     %h3
-      .post-avatar
-        = post.user.forum_display_name.first.upcase
-        
+      -# .post-avatar
+      -#   = post.user.forum_display_name.first.upcase
+
       = post.user.forum_display_name
 
       %small
@@ -16,18 +16,16 @@
     %p
       = mongoid_forums_format(post.text)
 
-  = link_to new_topic_post_path(post.topic_id, :reply_to_id => post.id) do
-    %i.fa.fa-fw.fa-quote-left
-    Quote
-  - if mongoid_forums_user && post.owner_or_admin?(mongoid_forums_user)
-    - if can?(:edit_post, post.topic.forum)
-      = link_to edit_topic_post_path(post.topic_id, post) do
-        %i.fa.fa-fw.fa-pencil-square-o
-        Edit
-    - if can?(:destroy_post, post.topic.forum)
-      = link_to topic_post_path(post.topic_id, post), :method => :delete do
-        %i.fa.fa-fw.fa-trash-o
-        Delete
-
-
-%hr
+  .post-links
+    = link_to new_topic_post_path(post.topic_id, :reply_to_id => post.id) do
+      %i.fa.fa-fw.fa-quote-left
+      Quote
+    - if mongoid_forums_user && post.owner_or_admin?(mongoid_forums_user)
+      - if can?(:edit_post, post.topic.forum)
+        = link_to edit_topic_post_path(post.topic_id, post) do
+          %i.fa.fa-fw.fa-pencil-square-o
+          Edit
+      - if can?(:destroy_post, post.topic.forum)
+        = link_to topic_post_path(post.topic_id, post), :method => :delete do
+          %i.fa.fa-fw.fa-trash-o
+          Delete
