--- a/app/views/mongoid_forums/topics/show.haml
+++ b/app/views/mongoid_forums/topics/show.haml
@@ -12,7 +12,7 @@
 
 
         %section.forum-boards
-          .forum-topic
+          .topic-container
             %header
               %h2
                 = @topic.name
