--- a/app/views/mongoid_forums/posts/new.haml
+++ b/app/views/mongoid_forums/posts/new.haml
@@ -14,6 +14,9 @@
           %i.fa.fa-fw.fa-angle-right
           New Post
 
+
+        .spacer-sm
+        
         %section.forum-boards
           - if params[:reply_to_id]
             - replying_to = MongoidForums::Post.find(params[:reply_to_id])
